src/css/product.css
/*Product Custom Css*/
.list-stream li::before {
  @apply absolute;
  content: "";
  background-image: url("../images/blue-check.svg");
  background-repeat: no-repeat;
  @apply bg-center;
  @apply w-5;
  @apply h-5;
  @apply top-3;
  @apply left-0;
}
.product-hero-banner {
  /* background-image: url("../images/product-banner.png"); */
  background-repeat: no-repeat;
  background-position: bottom right;
  background-size: 70%;
  /* background-size: 1080px; */
}
.product-page_banner::before {
  background-image: url("../images/product-banner-line-2.png");
  background-position: bottom right;
  background-size: 77% auto;
  background-repeat: no-repeat;
  position: absolute;
  content: "";
  width: 100%;
  height: 100%;
}
.product-video::before {
  background-image: url("../images/video-gradiant.svg");
  position: absolute;
  content: "";
  min-width: 550px;
  height: 71px;
  bottom: -72px;
  background-size: 100%;
  background-repeat: no-repeat;
  left: 5px;
  width: 100%;
}
.platform-hero-desc{
  max-width: 864px;
}
.video-library-banner::before {
  background-image: url("../images/pipe-start-right.svg"),
    url("../images/pipe-start-left.svg");
  background-position: top 50% right 0, top 50% left 0;
  background-size: 40% auto;
  background-repeat: no-repeat;
  position: absolute;
  content: "";
  width: 100%;
  height: 100%;
}


.segment-desktop-banner::before {
  /* background-image: url("../images/rudderstack-segment2x.svg"); */
  background-position: right -100px bottom 0px;
  background-size: auto 65%;
  background-repeat: no-repeat;
  position: absolute;
  content: "";
  width: 100%;
  height: 100%;
  z-index: 10;
}

.comparison-banner {
  background-position: right -100px bottom 0px;
  background-size: auto 65%;
  background-repeat: no-repeat;
  /* position: absolute; */
  content: "";
  width: 100%;
  height: 100%;
  z-index: 10;
}

/*Cloud Desktop CSS*/
.event-stream-list li::before {
  @apply absolute;
  content: "";
  background: url("../images/blue-check.svg");
  background-repeat: no-repeat;
  @apply bg-center;
  @apply w-5;
  @apply h-5;
  @apply top-1;
  @apply left-0;
}

.iframe-container img{
  margin: auto;
}
/*Cloud Desktop CSS*/

@media (min-width: 1600px) /*Product Custom Css*/ {
  .product-page_banner::before {
    background-size: 75% auto;
  }
}

@media only screen and (max-width: 1400px){
  .video-library-banner::before {
    background-size: 30% auto;
    background-position: top 50% right -7%, top 50% left -7%;
  }
}

@media (min-width: 1024px) {
  .product-page_banner {
    min-height: 700px;
  }
}

@media (min-width: 640px) and (max-width: 890px) {
  .sm\:bg-hero-pattern {
    background-position: center;
  }

.video-library-banner::before {
  background-image: none;

}

}
@media (max-width: 1024px) {
  .product-video::before {
    display: none;
  }
  .segment-desktop-banner::before {
    display: none;
  }
  .comparison-banner {
    background-size: 0px 0px;
  }
  .video-library-banner::before {
    background-image: none;
  }
  .left-right-section .leftrightimgcontent-wrapper, .bottomleftright-testimonial .leftrightbottom-testimonial-wrapper{
    flex-direction: column-reverse !important;
    row-gap: 60px;
  }
  .left-right-section .leftrightimgcontent-wrapper-col{
    flex-direction: column !important;
    row-gap: 60px;
  }
  .left-right-section .leftrightimgcontent-items{
    width: 100% !important;
  }
  .left-right-section .leftrightimgcontent-items img{
    max-width: 80% !important;
    margin: 0px auto !important;
  }
  .left-right-content{
    border-radius: 12px;
  }
}
@media (max-width: 575px) {
  .product-video::before,
  .product-page_banner::before {
    display: none;
  }
}
/*Product Custom Css*/

